--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -39,11 +39,6 @@ jobs:
         run: npm install
         working-directory: TestAppJs
 
-      - name: Run ESLint with flat config
-        run: npx eslint . --config eslint.config.mjs -f node_modules/eslint-sarif-formatter/sarif.js -o eslint-results.sarif
+      - name: Run ESLint
+        run: npx eslint . --config eslint.config.mjs
         working-directory: TestAppJs
-
-      - name: Upload SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: TestAppJs/eslint-results.sarif
