--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -40,5 +40,5 @@ jobs:
         working-directory: TestAppJs
 
       - name: Run ESLint
-        run: npx eslint . --config eslint.config.mjs
+        run: npx eslint .
         working-directory: TestAppJs
