--- a/TestAppJs/package.json
+++ b/TestAppJs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "testappjs",
   "version": "1.0.0",
+  "type": "module", 
   "main": "index.js",
   "scripts": {
     "start": "expo start",
