--- a/TestAppJs/package.json
+++ b/TestAppJs/package.json
@@ -9,28 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-<<<<<<< Updated upstream
-=======
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
->>>>>>> Stashed changes
+    "@supabase/supabase-js": "^2.54.0",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
-<<<<<<< Updated upstream
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
-=======
+    "react-native": "0.79.5",
     "react-native-paper": "^5.14.5",
-    "react-native-web": "^0.20.0"
->>>>>>> Stashed changes
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.20.0",
+    "supabase": "^2.33.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
