--- a/TestAppJs/package.json
+++ b/TestAppJs/package.json
@@ -32,7 +32,8 @@
     "react-native-paper": "^5.14.5",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "supabase": "^2.33.9"
+    "supabase": "^2.33.9",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
