--- a/TestAppJs/app.json
+++ b/TestAppJs/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "TestAppJs",
-    "slug": "TestAppJs",
+    "scheme": "com.myapp",
+    "name": "testappjs",
+    "slug": "testappjs",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,9 +14,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.myapp"
     },
     "android": {
+      "package": "com.myapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
